[package]
name = "music-blobs"
version = "0.1.0"
edition = "2021"

[dependencies]
# DogRS ecosystem
dog-core = "0.1.0"
dog-axum = "0.1.0"
dog-typedb = "0.1.0"
dog-blob = "0.1.0"

# Web framework
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0.230", features = ["derive"] }
serde_json = "1.0.146"

# Storage & streaming
bytes = "1.9.0"
futures = "0.3.32"
async-trait = "0.1.90"

# Audio metadata
id3 = "1.15.0"
symphonia = { version = "0.6", features = ["all"] }
async-stream = "0.3.7"

# AWS SDK for RustFS (S3-compatible)
aws-config = "1.9"
aws-sdk-s3 = "1.120"
aws-credential-types = "1.3"

# Utilities
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.101"
base64 = "0.22.2"

# Multipart form data parsing
multer = "3.2.0"

# Production session management
once_cell = "1.21.0"
dashmap = "6.2.0"
parking_lot = "0.12.4"
tokio-util = "0.7.13"
