[package]
name = "music-blobs"
version = "0.1.0"
edition = "2021"

[dependencies]
# DogRS ecosystem
dog-core = "0.1.6"
dog-axum = "0.1.6"
dog-typedb = "0.1.6"
dog-blob = "0.1.6"

# Web framework
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage & streaming
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"

# Audio metadata
id3 = "1.0"
symphonia = { version = "0.5", features = ["all"] }
async-stream = "0.3"

# AWS SDK for RustFS (S3-compatible)
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
aws-credential-types = "1.1.7"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
base64 = "0.22.1"

# Multipart form data parsing
multer = "3.0"

# Production session management
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"
tokio-util = "0.7"
