[package]
name = "music-blobs"
version = "0.1.0"
edition = "2021"

[dependencies]
# DogRS ecosystem
dog-core = "0.1.7"
dog-axum = "0.1.7"
dog-typedb = "0.1.7"
dog-blob = "0.1.7"

# Web framework
axum = { version = "0.8.9", features = ["multipart"] }
tokio = { version = "1.52", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage & streaming
bytes = "1.11"
futures = "0.3"
async-trait = "0.1"

# Audio metadata
id3 = "1.17"
symphonia = { version = "0.5", features = ["all"] }
async-stream = "0.3"

# AWS SDK for RustFS (S3-compatible)
aws-config = "1.8.18"
aws-sdk-s3 = "1.135.0"
aws-credential-types = "1.2.14"

# Utilities
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
base64 = "0.22.1"

# Multipart form data parsing
multer = "3.1"

# Production session management
once_cell = "1.21"
dashmap = "6.2"
parking_lot = "0.12"
tokio-util = "0.7"
