[package]
name = "social-typedb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.90"
dog-axum = "0.1.0"
dog-core = { version = "0.1.0", features = ["serde", "adapters"] }
dog-typedb = "0.1.0"
futures = "0.3.32"
serde = { version = "1.0.230", features = ["derive"] }
serde_json = "1.0.146"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tracing-subscriber = { version = "0.3.21", features = ["env-filter"] }
typedb-driver = "3.8.0"

[lib]
name = "social_typedb"
path = "src/lib.rs"
