[package]
name = "social-typedb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
dog-axum = "0.1.6"
# Workspace member; version = "0.1.6" satisfies local 0.1.8 (>=0.1.6, <0.2.0).
dog-core = { version = "0.1.6", features = ["serde", "adapters"] }
# Not yet on crates.io — use workspace path directly.
dog-schema = { path = "../../dog-schema", version = "0.1.8" }
dog-typedb = "0.1.6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typedb-driver = "3.7.0"

[lib]
name = "social_typedb"
path = "src/lib.rs"
