[package]
name = "social-typedb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
dog-axum = { path = "../../dog-axum" }
dog-core = { path = "../../dog-core", features = ["json", "adapters"] }
dog-schema = { path = "../../dog-schema" }
dog-typedb = { path = "../../dog-typedb" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typedb-driver = "3.11.5"

[lib]
name = "social_typedb"
path = "src/lib.rs"
