[package]
name = "jango-clone"
version = "0.1.0"
edition = "2021"

[dependencies]
# DogRS ecosystem
dog-core = { path = "../../dog-core" }
dog-axum = { path = "../../dog-axum" }
dog-typedb = { path = "../../dog-typedb" }
dog-blob = { path = "../../dog-blob" }

# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage & streaming
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"

# RustFS SDK (hypothetical - would be real in production)
# rustfs-sdk = "1.0"

# Audio metadata
id3 = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
